--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <script>
         function checkCode() {
             var code = document.getElementById("codeInput").value;
-            if (code === "love2024") { 
+            if (code === "loveintheair") { 
                 document.getElementById("message").style.display = "block";
             } else {
                 alert("Oops! Wrong code, try again.");
